--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>
         Chiggy's Vault
     </title>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
