--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </h1>
     <p>It seems you've landed in chiggy's Vault. It's pretty empty right now, though. All you can do here is watch some
         jellyfin 😛</p>
-    <p>Suggested applications to use jellyfin:</p>
+    <p>Recommended applications to use jellyfin:</p>
     <ul>
         <li>
             <h3><a href="https://play.google.com/store/apps/details?id=dev.jdtech.jellyfin&hl=en_IN&gl=US">Android -
