--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <style>
         img.emoji {
             /* Since we are using SVGs, you have to change the width using CSS */
-            width: 1.5em;
+            width: 5vh;
 
             /* 
             This is to make the emojis feel like actual emojis to 
