--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico?" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
